--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,15 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "juampi92/cursor-pagination": "^1.6",
         "jwilsson/spotify-web-api-php": "^4.3",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/socialite": "^5.2",
+        "laravel/tinker": "^2.5",
+        "league/fractal": "^0.19.2",
+        "pusher/pusher-php-server": "^7.0",
+        "socialiteproviders/spotify": "^4.1",
+        "spatie/laravel-fractal": "^5.8"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
